Adds advert handlers  adding/deleting/editing.
