# routes/Advertisement/AdController.js
@@ -4,10 +4,40 @@ const Advertisement = require('../../models/Advertisement');
 const User = require('../../models/User');
 
 class AdControlled {
-  async editAdvert(req, res) {
-
+  async removeAdvertById(req, res) {
+    // #swagger.description = 'Delete advert by id'
+    
+    try{
+        await Advertisement.deleteOne({_id:req.params.id});
+        return res.json({ message: "Succesfully updated!" });
+    }
+    catch(e){
+      console.log(e);
+      return res.status(400).json({ message: 'Something did wrong' });
+    }
+  }
+  async updateAdvertById(req, res) {
+    // #swagger.description = 'Update advert by id'
+    try{
+        const {title,description,image,price,status} = req.body;
+        const options = {
+          title,description,image,price
+        }
+        if (status) {
+          const newStatus = await AdStatus.findOne({value:status});
+          options["status"] = newStatus.value;
+        };
+        await Advertisement.updateOne({_id:req.params.id},{$set:options});
+        return res.json({ message: "Succesfully updated!" });
+    }
+    catch(e){
+      console.log(e);
+      return res.status(400).json({ message: 'Something did wrong' });
+    }
   }
   async getAdvertById(req, res) {
+    // #swagger.description = 'Get advert by id'
+
     try {
       const results = await Advertisement.findOne({ _id: req.params.id });
       if (!results) res.status(404);
@@ -18,6 +48,8 @@ class AdControlled {
     }
   }
   async getAdvertByQuery(req, res) {
+    // #swagger.description = 'Get advert by query'
+
     try {
       const options = {
         price: {
@@ -27,16 +59,18 @@ class AdControlled {
         title: { $regex: req.query.title || /.*/, $options: "i" },
         author: { $regex: req.query.author || /.*/, $options: "i" },
       };
-
+      
       const results = await Advertisement.find(options).skip(req.query.skip || 0).limit(req.query.limit || Infinity);
-      return res.json({ ad: results });
+      const resultsCount = await Advertisement.countDocuments(options);
+      return res.json({ ad: results,count:resultsCount });
     } catch (e) {
       console.log(e);
       return res.status(400).json({ message: 'Something did wrong' });
     }
   }
   async createAdvert(req, res) {
-    
+    // #swagger.description = 'Create advert by id'
+
     try {
       const [type, token] = req.headers.authorization.split(' ');
       const { title, description, image, price } = req.body;
@@ -56,7 +90,7 @@ class AdControlled {
         status: status.value,
       });
       await advert.save();
-      console.log('Created');
+      return res.status(200).json({ message: 'Success' });
     } catch (e) {
       console.log(e);
       return res.status(400).json({ message: 'Something did wrong' });
